# ril-ad

./: CMakeLists.txt  adapter.c  adapter.cfg  adapter.h  main.c  prepare.sh
include/log/: log.h
